# open5gs_fork

src/: meson.build
src/amf/: gmm-handler.c  gmm-sm.c
src/crc/: crc.c  crc.h  crc_metrics_example.c  crc_metrics_example.h  meson.build  metrics.c  metrics.h
tests/unit/: abts-main.c  crc-test.c  meson.build
